<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="780dp"
    android:background="@color/mybackground"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/Union"
        android:layout_width="221dp"
        android:layout_height="182dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/union_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002"
        app:srcCompat="@drawable/ic_union" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="604dp"
        android:text="@string/location"
        android:textColor="@color/TextColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/home_page"
        android:layout_width="165dp"
        android:layout_height="56dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:gravity="top"
        android:text="@string/Home_Info"
        android:textColor="@color/TextColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.434" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/temperature"
        android:textColor="@color/TextColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/location"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/bg"
        android:layout_width="360dp"
        android:layout_height="539dp"
        android:contentDescription="@string/bg_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88"
        app:srcCompat="@drawable/ic_cityback" />

    <ImageView
        android:id="@+id/robot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/robot_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002"
        app:srcCompat="@drawable/robot" />

    <ImageView
        android:id="@+id/BgButton"
        android:layout_width="184dp"
        android:layout_height="93dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/bg_item"
        app:layout_constraintBottom_toTopOf="@+id/BgMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/istambulbutton"
        app:srcCompat="@drawable/ic_bgbutton" />

    <ImageButton
        android:id="@+id/MoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/MoreButton_item"
        android:onClick="MoreCitiesPage"
        app:layout_constraintBottom_toBottomOf="@+id/BgButton"
        app:layout_constraintEnd_toEndOf="@+id/BgButton"
        app:layout_constraintStart_toStartOf="@+id/BgButton"
        app:layout_constraintTop_toTopOf="@+id/BgButton"
        app:srcCompat="@drawable/ic_buttonmore"
        tools:ignore="UsingOnClickInXml" />

    <ImageView
        android:id="@+id/BgMenu"
        android:layout_width="362dp"
        android:layout_height="61dp"
        android:contentDescription="@string/BGMenu_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/istambulbutton"
        app:layout_constraintVertical_bias="0.58000004"
        app:srcCompat="@drawable/ic_menubg" />

    <ImageButton
        android:id="@+id/ActiveHomePageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/ActiveHomePageButton_item"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/BgMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/BgMenu"
        app:layout_constraintTop_toTopOf="@+id/BgMenu"
        app:srcCompat="@drawable/ic_activehomepage" />

    <ImageButton
        android:id="@+id/InactiveCalendarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/InactiveCalendarButton_item"
        android:minHeight="48dp"
        android:onClick="CalendarPage"
        app:layout_constraintBottom_toBottomOf="@+id/BgMenu"
        app:layout_constraintEnd_toStartOf="@+id/ActiveHomePageButton"
        app:layout_constraintStart_toStartOf="@+id/BgMenu"
        app:layout_constraintTop_toTopOf="@+id/BgMenu"
        app:srcCompat="@drawable/ic_inactivecalendar" />

    <ImageButton
        android:id="@+id/InactiveProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/InactiveProfileButton_item"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/BgMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ActiveHomePageButton"
        app:layout_constraintTop_toTopOf="@+id/BgMenu"
        app:srcCompat="@drawable/ic_inactiveaccount"
        />

    <ImageButton
        android:id="@+id/moscowbutton"
        android:layout_width="144dp"
        android:layout_height="208dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/moscow_item"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bg"
        app:srcCompat="@drawable/moscowbutton" />

    <ImageButton
        android:id="@+id/spbutton"
        android:layout_width="184dp"
        android:layout_height="119dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/saint_petesburg_item"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/moscowbutton"
        app:layout_constraintTop_toTopOf="@+id/bg"
        app:srcCompat="@drawable/saintpetersburgbutton" />

    <ImageButton
        android:id="@+id/istambulbutton"
        android:layout_width="144dp"
        android:layout_height="221dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Istambul_item"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moscowbutton"
        app:srcCompat="@drawable/istanbul" />

    <ImageButton
        android:id="@+id/KazanButton"
        android:layout_width="182dp"
        android:layout_height="203dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Kazan_item"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/BgButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spbutton"
        app:layout_constraintVertical_bias="0.13999999"
        app:srcCompat="@drawable/kazan" />

</androidx.constraintlayout.widget.ConstraintLayout>

